--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="はじめまして！個人事務所AutoSystemsの原匠一郎（はら しょういちろう）です。" />
+        <meta name="description" content="AutoSystemsの使命は、世界中のシステムを自動化し、世界中の人がアクセスできて使えるようにすることです。" />
         <meta property='og:type' content='website'>
-        <meta property='og:title' content='Shoichiro Hara portfolio'>
-        <meta property='og:url' content='https://amplil.github.io/'>
-        <meta property='og:description' content='はじめまして！個人事務所AutoSystemsの原匠一郎（はら しょういちろう）です。'>
+        <meta property='og:title' content='AutoSystems, Inc.'>
+        <meta property='og:url' content='https://autosystems.tech/'>
+        <meta property='og:description' content='AutoSystemsの使命は、世界中のシステムを自動化し、世界中の人がアクセスできて使えるようにすることです。'>
         <meta property="og:image" content="img/ogp.jpg">
         <meta name="author" content="amplil" />
-        <title>HARA ポートフォリオ</title>
+        <title>AutoSystems株式会社</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -25,14 +25,14 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="#page-top"><!--img src="assets/img/navbar-logo.svg" alt="..." /-->Hara's portfolio</a>
+                <a class="navbar-brand" href="#page-top"><!--img src="assets/img/navbar-logo.svg" alt="..." /-->AutoSystems, Inc.</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ms-1"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#works">WORKS</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#works">about</a></li>
                         <li class="nav-item"><a class="nav-link" href="#skill">SKILL</a></li>
                         <li class="nav-item"><a class="nav-link" href="#social">SOCIAL</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">CONTACT</a></li>
@@ -43,16 +43,15 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Shoichiro Hara</div>
-                <div class="masthead-heading text-uppercase">Portfolio</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="#works">Tell Me More</a>
+                <div class="masthead-heading">AutoSystemsの使命は、<br>世界中のシステムを自動化し、<br>世界中の人がアクセスできて<br>使えるようにすることです。</div>
+                <a class="btn btn-primary btn-xl text-uppercase" href="#contact">お問い合わせ</a>
             </div>
         </header>
         <!-- works Grid-->
         <section class="page-section bg-light" id="works">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">works</h2>
+                    <h2 class="section-heading text-uppercase">about</h2>
                     <!--h3 class="section-subheading text-muted">今まで作ってきた作品の数々です！</h3-->
                 </div>
                 <div class="row">
@@ -60,27 +59,19 @@
                         <!-- works item 1-->
                         <div class="works-item">
                             <a class="works-link" href="#page-top">
-                                <img class="img-fluid" src="assets/img/works/qrcode.png" alt="..." />
+                                <img class="img-fluid" src="assets/img/works/autosystems_qr.png" alt="..." />
                             </a>
                             <div class="works-caption">
-                                <div class="works-caption-heading">プロフィールとQRコード</div>
-                                <div class="works-caption-subheading text-muted">はじめまして！個人事務所AutoSystemsの原 匠一郎（はら しょういちろう）です。主に自動化を中心としたシステムの研究・開発を行っています。このサイトのQRコードを載せてみました！</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-sm-6 mb-4">
-                        <!-- works item 2-->
-                        <div class="works-item">
-                            <a class="works-link" href="https://ideatech.blog/" target="_blank" rel="noopener">
-                                <div class="works-hover">
-                                    <div class="works-hover-content"><i class="fa-solid fa-arrow-up-right-from-square fa-3x"></i></div>
+                                <div class="works-caption-heading">会社情報</div>
+                                <div class="works-caption-subheading text-muted">
+                                    会社名：AutoSystems株式会社<br>
+                                    代表取締役：原匠一郎<br>
+                                    資本金：1,500,000円<br>
+                                    所在地：〒107-0062 東京都港区南青山2-2<br>
+                                    設立：2023年4月12日<br>
+                                    事業内容：ハードウェアおよびソフトウェアの研究・開発<br>
+                                    URL：<a href="https://autosystems.tech/" target="_blank" rel="noopener">https://autosystems.tech/</a>
                                 </div>
-                                <img class="img-fluid" src="assets/img/works/works-blog.png" alt="..." />
-                            </a>
-                            <div class="works-caption">
-                                <div class="works-caption-heading">個人ブログ</div>
-                                <div class="works-caption-subheading text-muted">Next.js+Vercel+microCMS+Cloudinaryを使ったJamstackブログにフルリニューアルしました！</div>
-                                <div><a href="https://github.com/Amplil/next-blog" target="_blank" rel="noopener">ソースコード</a></div>
                             </div>
                         </div>
                     </div>
@@ -241,24 +232,23 @@
         <section class="page-section" id="contact">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Contact Us</h2>
+                    <h2 class="section-heading text-uppercase">お問い合わせ</h2>
                     <!--h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3-->
                 </div>
 
                 <script src="https://sdk.form.run/js/v2/embed.js"></script>
                 <div
                   class="formrun-embed"
-                  data-formrun-form="@aikotobahaaburakatabura-1667315517"
+                  data-formrun-form="@s-hara-1682018099"
                   data-formrun-redirect="true">
-                </div>
-                
+                </div>                
             </div>
         </section>
         <!-- Footer-->
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-start">Copyright &copy; HARASHO 2022</div>
+                    <div class="col-lg-4 text-lg-start">Copyright &copy; AutoSystems, Inc. 2023</div>
                     <!--div class="col-lg-4 my-3 my-lg-0">
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
