--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                     会社名：AutoSystems株式会社<br>
                                     代表取締役：原匠一郎<br>
                                     資本金：1,500,000円<br>
-                                    所在地：〒107-0062 東京都港区南青山2-2<br>
+                                    所在地：〒101-0021 東京都千代田区外神田２丁目１０番６号ＬａＭａｉｓｏｎ神田３Ａ号室<br>
                                     設立：2023年4月12日<br>
                                     事業内容：ハードウェアおよびソフトウェアの研究・開発<br>
                                     URL：<a href="https://autosystems.tech/" target="_blank" rel="noopener">https://autosystems.tech/</a>
