--- a/index.html
+++ b/index.html
@@ -75,6 +75,22 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-4 col-sm-6 mb-4">
+                        <!-- works item 3-->
+                        <div class="works-item">
+                            <a class="works-link" href="https://www.dollhousecosme.shop/" target="_blank" rel="noopener">
+                                <div class="works-hover">
+                                    <div class="works-hover-content"><i class="fa-solid fa-arrow-up-right-from-square fa-3x"></i></div>
+                                </div>
+                                <img class="img-fluid" src="assets/img/works/dollhousecosme_qr.png" alt="..." />
+                            </a>
+                            <div class="works-caption">
+                                <div class="works-caption-heading">DOLL HOUSE COSME</div>
+                                <div class="works-caption-subheading text-muted">化粧品を中心とした商品紹介とユーザコミュニティ</div>
+                                <div><a href="https://www.dollhousecosme.shop/" target="_blank" rel="noopener">ドールハウスコスメ | 魅力的な商品がきっと見つかる！</a></div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
                         <!-- works item 4-->
                         <div class="works-item">
@@ -94,15 +110,15 @@
                     <div class="col-lg-4 col-sm-6 mb-4">
                         <!-- works item 3-->
                         <div class="works-item">
-                            <a class="works-link" href="shop/price_comparison.html?keyword=%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%9F%E3%83%B3%E3%82%B0&shop%5B%5D=rakuten&order=relevanceblender" target="_blank" rel="noopener">
+                            <a class="works-link" href="https://openmarket.autosystems.tech/?keyword=%E3%82%AD%E3%83%BC%E3%83%9C%E3%83%BC%E3%83%89&shop%5B%5D=rakuten&order=review-rank" target="_blank" rel="noopener">
                                 <div class="works-hover">
                                     <div class="works-hover-content"><i class="fa-solid fa-arrow-up-right-from-square fa-3x"></i></div>
                                 </div>
                                 <img class="img-fluid" src="assets/img/works/works-openmarket.png" alt="..." />
                             </a>
                             <div class="works-caption">
-                                <div class="works-caption-heading">商品比較サイト</div>
-                                <div class="works-caption-subheading text-muted">いろいろなショッピングサイトの商品を一括で検索＆比較できるWEBアプリです。Vue.jsを使っています。現在、Nuxt.jsに移行途中です。</div>
+                                <div class="works-caption-heading">OpenMARKET</div>
+                                <div class="works-caption-subheading text-muted">いろいろなショッピングサイトの商品を一括で検索＆比較できるWEBアプリです。Vue.jsを使っています。現在、Next.jsに移行中です。</div>
                                 <div><a href="https://github.com/Amplil/ec_comparison_program" target="_blank" rel="noopener">ソースコード</a></div>
                             </div>
                         </div>
